fix issue when moving a tab, other tabs may be invisible

--- a/sass/chrome-tabs.sass
+++ b/sass/chrome-tabs.sass
@@ -23,9 +23,6 @@
         border-bottom: 1px solid rgba(0, 0, 0, .35)
         z-index: 20
 
-    &.chrome-tabs-sorting .chrome-tabs:not(.chrome-tabs-clone) .chrome-tab:not(.ui-sortable-draggable-item)
-        opacity: 0
-
 .chrome-tabs
     +pie-clearfix
     position: relative
@@ -51,7 +48,6 @@
         float: left
         position: relative
         height: 25px
-        width: 160px
         border: 0px
         margin: 0px
         z-index: 1
